# opencvsharp5

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  c_cpp_properties.json  devcontainer.json
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  msbuild.yml  ubuntu.yml  wasm.yml  windows.yml
cpp/: .dockerignore  CMakeLists.txt  CMakePresets.json  CMakePresets_.json  CMakeSettings.json  Dockerfile  Dockerfile_wasm  Folder.DotSettings  build_opencv_windows.ps1  core.hpp  imgproc.hpp  main.cpp  ml.hpp  vcpkg.json
cpp/.devcontainer/: Dockerfile  c_cpp_properties.json  devcontainer.json
cpp/docker/: Dockerfile_wasm
cpp/src/: CMakeLists.txt  CMakeLists.txt.bak  common.hpp  core.cpp  core.hpp  core_InputArray.hpp  core_Mat.hpp  core_MatExpr.hpp  imgcodecs.cpp  imgcodecs.hpp  imgproc.cpp  imgproc.hpp  std_string.cpp  std_string.hpp  std_vector.cpp  std_vector.hpp  std_vector_nesting.hpp  std_vector_primitive.hpp
cpp/test/: test_core.cpp  test_core_InputArray.cpp  test_core_Mat.cpp  test_core_MatExpr.cpp  test_imgcodecs.cpp  test_imgproc.cpp
cs/: .editorconfig  OpenCvSharp5.sln  OpenCvSharp5.sln.DotSettings
cs/OpenCvSharp5/: DisposableArray.cs  IInputArray.cs  IInputOutputArray.cs  IOutputArray.cs  Mat.cs  NativeMethods.core.Mat.cs  NativeMethods.cs  OpenCVException.cs  OpenCvSharp5.csproj  OpenCvSharp5.props  OpenCvSharpException.cs  SafeHandleExtensions.cs  StdString.cs  Usings.cs
cs/OpenCvSharp5.Benchmark/: OpenCvSharp5.Benchmark.csproj  Program.cs
cs/OpenCvSharp5.Tests/: DisposableArrayTests.cs  ExceptionHandlingTests.cs  OpenCVExceptionTests.cs  OpenCvSharp5.Tests.csproj  SaturateCastLegacyTests .cs  SaturateCastTests .cs  SaturateCastTests.cs  StdStringTests.cs  TestHelper.cs  UnitTest1.cs  coverlet.runsettings
cs/OpenCvSharp5.Tests/Core/: CoreTests.cs  DMatchTests.cs  KeyPointTests.cs  MatExprTests.cs  MatTests.cs  MatTypeTests.cs  Point2dTests.cs  Point2fTests.cs  Point3dTests.cs  Point3fTests.cs  Point3iTests.cs  PointTests.cs  Rect2dTests.cs  Rect2fTests.cs  RectTests.cs  RotatedRectTests.cs  ScalarTests.cs  SizeTests.cs  TermCriteriaTests.cs  Vec2Tests.cs  Vec3Tests.cs  Vec4Tests.cs  Vec6Tests.cs
cs/OpenCvSharp5.Tests/ImgCodecs/: ImageEncodingParamTests.cs  ImgCodecsTests.cs
cs/OpenCvSharp5.Tests/ImgProc/: ImgProcTests.cs
cs/OpenCvSharp5/Cv2/: Cv2.core.cs  Cv2.imgcodecs.cs  Cv2.imgproc.cs
cs/OpenCvSharp5/Internal/: ExceptionHandler.cs  ExceptionStatus.cs  IInputArray.cs  IInputOutputArray.cs  IOutputArray.cs  ISafeHandleHolder.cs  ModuleInit.cs  NativeMethods.core.Mat.cs  NativeMethods.cs  SafeHandleExtensions.cs  SaturateCast.cs  SaturateCastMethods.cs  StdString.cs
cs/OpenCvSharp5/Internal/PInvoke/: NativeMethods.core.InputOutputArray.cs  NativeMethods.core.Mat.cs  NativeMethods.core.cs  NativeMethods.cs  NativeMethods.imgcodecs.cs  NativeMethods.imgproc.cs  NativeMethods.stdvector.cs  NativeMethods_core.cs  NativeMethods_core_InputOutputArray.cs  NativeMethods_core_Mat.cs  NativeMethods_core_MatExpr.cs  NativeMethods_imgproc.cs  NativeMethods_stdstring.cs  NativeMethods_stdvector.cs
cs/OpenCvSharp5/Internal/Vectors/: IStdVector.cs  VectorOfByte.cs  VectorOfMat.cs
cs/OpenCvSharp5/Modules/core/: Mat.cs  MatExpr.cs  MatMemoryManager.cs
cs/OpenCvSharp5/Modules/core/Enum/: CmpTypes.cs  CriteriaTypes.cs  DecompTypes.cs  ErrorCode.cs  FormatType.cs
cs/OpenCvSharp5/Modules/core/Struct/: DMatch.cs  KeyPoint.cs  MatType.cs  Point.cs  Point2d.cs  Point2f.cs  Point3d.cs  Point3f.cs  Point3i.cs  Point_.cs  Range.cs  Rangef.cs  Rect.cs  Rect2d.cs  Rect2f.cs  RotatedRect.cs  Scalar.cs  Size.cs  Size2d.cs  Size2f.cs  TermCriteria.cs
cs/OpenCvSharp5/Modules/core/Struct/Vec/: IVec.cs  (+28 more)
cs/OpenCvSharp5/Modules/imgcodecs/: ImageEncodingParam.cs
cs/OpenCvSharp5/Modules/imgcodecs/Enum/: ImreadModes.cs  ImwriteFlags.cs
cs/OpenCvSharp5/Modules/imgproc/Enum/: LineTypes.cs
cs/samples/BlazorApp/: BlazorApp.csproj  CanvasClient.cs
cs/samples/BlazorApp/Properties/: launchSettings.json
cs/samples/BlazorApp/wwwroot/: index.html
samples/: OpenCvSharp5.Samples.sln  nuget.config
samples/BlazorApp/: .gitignore  BlazorApp.csproj  _Imports.razor
samples/BlazorApp/Pages/: Canvas.razor  Index.razor  OpenCvSharpSample.razor
samples/BlazorApp/Shared/: NavMenu.razor
samples/BlazorApp/wwwroot/js/: canvas.js
samples/OpenCvSharp5Samples/: OpenCvSharp5Samples.csproj  Program.cs
